--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "js-yaml": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
+    "markdown-it": "^14.1.0",
     "next": "13.4.7",
     "nft.storage": "^7.1.1",
     "notistack": "^3.0.1",
@@ -51,6 +52,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.10.2",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.9.0",
     "react-spring": "^9.7.3",
