--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@prisma/client": "5.18.0",
     "@supabase/ssr": "^0.3.0",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -31,6 +33,7 @@
     "antd": "^5.11.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
@@ -39,6 +42,7 @@
     "hardhat": "^2.19.1",
     "js-cookie": "^3.0.5",
     "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
     "markdown-it": "^14.1.0",
