--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react": "18.2.0",
     "react-datepicker": "^6.3.0",
     "react-dom": "18.2.0",
+    "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.10.2",
     "react-markdown-editor-lite": "^1.3.4",
