--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@polymedia/webutils": "^0.0.53",
     "@prisma/client": "5.18.0",
     "@supabase/ssr": "^0.3.0",
+    "@tabler/icons-react": "^3.14.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
@@ -34,11 +35,12 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "ethers": "^5.7.2",
-    "framer-motion": "^11.2.2",
+    "framer-motion": "^11.3.30",
     "hardhat": "^2.19.1",
     "js-cookie": "^3.0.5",
     "js-yaml": "^4.1.0",
@@ -63,6 +65,7 @@
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.9.0",
     "react-spring": "^9.7.3",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.2",
     "web3": "^1.7.0",
     "zod": "^3.23.8",
