--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@polymedia/suits": "^0.0.42",
     "@polymedia/webutils": "^0.0.53",
     "@prisma/client": "5.18.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@supabase/ssr": "^0.3.0",
     "@tabler/icons-react": "^3.14.0",
     "@tailwindcss/forms": "^0.5.7",
@@ -35,6 +38,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "eslint": "8.43.0",
