--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@react-three/fiber": "^8.17.6",
     "@supabase/ssr": "^0.3.0",
     "@tabler/icons-react": "^3.14.0",
     "@tailwindcss/forms": "^0.5.7",
@@ -32,6 +33,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@types/three": "^0.168.0",
     "@vercel/kv": "^0.2.2",
     "alchemy-sdk": "^3.1.0",
     "antd": "^5.11.4",
@@ -51,6 +53,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.438.0",
     "markdown-it": "^14.1.0",
     "next": "13.4.7",
     "nft.storage": "^7.1.1",
@@ -71,6 +74,8 @@
     "react-spring": "^9.7.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.168.0",
     "web3": "^1.7.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
