--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-intersection-observer": "^9.10.2",
     "react-markdown-editor-lite": "^1.3.4",
     "react-spring": "^9.7.3",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
