--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/bcrypt": "^5.0.2",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
@@ -50,6 +51,7 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/js-yaml": "^4.0.5",
+    "@types/jsonwebtoken": "^9.0.6",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
