--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/js-yaml": "^4.0.5",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/react": "^18.3.5",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
