--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.10.2",
     "react-markdown-editor-lite": "^1.3.4",
+    "react-select": "^5.8.0",
     "react-spring": "^9.7.3",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.5.2",
