--- a/.github/workflows/main_sharetos.yml
+++ b/.github/workflows/main_sharetos.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - sharetos
 
 on:
@@ -21,11 +18,11 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: npm install, prisma generate, and build
         run: |
           npm install
+          npx prisma generate
           npm run build --if-present
-          npm run test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -68,4 +65,3 @@ jobs:
           app-name: 'sharetos'
           slot-name: 'Production'
           package: .
-          
