--- a/.github/workflows/main_sharetos.yml
+++ b/.github/workflows/main_sharetos.yml
@@ -40,7 +40,7 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write # This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
@@ -58,10 +58,15 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_CF89D4FA336F4436A6FBA4BAF290A8CD }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E96F9E64DC6340E393CA9EB8822343D1 }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: 'Deploy to Azure Web App using SCM'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'sharetos'
           slot-name: 'Production'
-          package: .
+          package: './release.zip'
+          enable-oryx-build: false  # Disables OneDeploy and enables ZIP deploy
+
+      - name: Restart Azure App Service (Optional)
+        run: |
+          az webapp restart --name sharetos --resource-group <your-resource-group>
